5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1758_1576.log
== TEST (2019-05-21 12:45:08) 
-- CODE:
u = int(array(eval(input("digite: "))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    u = int(array(eval(input())))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 12:46:48) 
-- CODE:
u =array(eval(input("digite: ")))
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    u =array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 12:47:37) 
-- CODE:
from numpy import*
u = array(eval(input("digite: ")))
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 12:48:30) 
-- CODE:
from numpy import*
u = int(array(eval(input("digite: "))))
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 12:48:39) 
-- CODE:
from numpy import*
u = int(array(eval(input("digite: "))))
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 09:30:38) 
-- CODE:
from numpy import*
x = (array(eval(input("digite a seuqencia de jogadas: ")))
y = (array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
posi= 0
xvit = 0
yvit = 0

11 = pedra
22 = papel
33 = tesoura
		 
while(posi>size(eu)):
	 if(x==tesoura and y==papel or x==papel and y==pedra or x==pedra and y== tesoura):
		msg = "EUSAPIA"
	  	i = i + 1
	  elif(y==tesoura and x==papel or y==papel and x==pedra or y==pedra and x==tesoura):
	  	msg = "BARSANULFO"
	  	i = i + 1
	  else:
	  	msg = "EMPATE"
	  	i = i + 1
	  
print(i)
	  print(msg)

	  
	  

-- ERROR:
File "XXXX", line 3
    y = (array(eval(input()))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 09:31:19) 
-- CODE:
from numpy import*
x = array(eval(input("digite a seuqencia de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
posi= 0
xvit = 0
yvit = 0

11 = pedra
22 = papel
33 = tesoura
		 
while(posi>size(eu)):
	 if(x==tesoura and y==papel or x==papel and y==pedra or x==pedra and y== tesoura):
		msg = "EUSAPIA"
	  	i = i + 1
	  elif(y==tesoura and x==papel or y==papel and x==pedra or y==pedra and x==tesoura):
	  	msg = "BARSANULFO"
	  	i = i + 1
	  else:
	  	msg = "EMPATE"
	  	i = i + 1
	  
print(i)
	  print(msg)

	  
	  

-- ERROR:
File "XXXX", line 19
    msg = "EUSAPIA"
                  ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 09:32:03) 
-- CODE:
from numpy import*
x = array(eval(input("digite a seuqencia de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
posi= 0
xvit = 0
yvit = 0

11 = pedra
22 = papel
33 = tesoura
		 
while(posi>size(eu)):
	if(x==tesoura and y==papel or x==papel and y==pedra or x==pedra and y== tesoura):
		msg = "EUSAPIA"
	  	i = i + 1
	  elif(y==tesoura and x==papel or y==papel and x==pedra or y==pedra and x==tesoura):
	  	msg = "BARSANULFO"
	  	i = i + 1
	  else:
	  	msg = "EMPATE"
	  	i = i + 1
	  
print(i)
	  print(msg)

	  
	  

-- ERROR:
File "XXXX", line 20
    i = i + 1
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 09:33:19) 
-- CODE:
from numpy import*
x = array(eval(input("digite a seuqencia de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
posi= 0
xvit = 0
yvit = 0

11 = pedra
22 = papel
33 = tesoura
		 
while(posi>size(eu)):
	if(x==tesoura and y==papel or x==papel and y==pedra or x==pedra and y== tesoura):
		msg = "EUSAPIA"
		i = i + 1
	elif(y==tesoura and x==papel or y==papel and x==pedra or y==pedra and x==tesoura):
		msg = "BARSANULFO"
		i = i + 1
	else:
		msg = "EMPATE"
		i = i + 1
	  
	print(i)
	print(msg)

	  
	  

-- ERROR:
File "XXXX", line 13
    11 = pedra
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 09:34:28) 
-- CODE:
from numpy import*
x = array(eval(input("digite a seuqencia de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
posi= 0
xvit = 0
yvit = 0

pedra = 11
papel = 22
tesoura= 33
		 
while(posi>size(eu)):
	if(x==tesoura and y==papel or x==papel and y==pedra or x==pedra and y== tesoura):
		msg = "EUSAPIA"
		i = i + 1
	elif(y==tesoura and x==papel or y==papel and x==pedra or y==pedra and x==tesoura):
		msg = "BARSANULFO"
		i = i + 1
	else:
		msg = "EMPATE"
		i = i + 1
	  
	print(i)
	print(msg)

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 09:35:27) 
-- CODE:
from numpy import*
x = array(eval(input("digite a seuqencia de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
posi= 0
xvit = 0
yvit = 0

pedra = 11
papel = 22
tesoura= 33
		 
while(posi>size(x)):
	if(x==tesoura and y==papel or x==papel and y==pedra or x==pedra and y== tesoura):
		msg = "EUSAPIA"
		i = i + 1
	elif(y==tesoura and x==papel or y==papel and x==pedra or y==pedra and x==tesoura):
		msg = "BARSANULFO"
		i = i + 1
	else:
		msg = "EMPATE"
		i = i + 1
	  
	print(i)
	print(msg)

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 09:37:54) 
-- CODE:
from numpy import*
x = array(eval(input("digite a seuqencia de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
xvit = 0
yvit = 0

pedra = 11
papel = 22
tesoura= 33
		 
while(i>size(x)):
	if(x==tesoura and y==papel or x==papel and y==pedra or x==pedra and y== tesoura):
		msg = "EUSAPIA"
		i = i + 1
	elif(y==tesoura and x==papel or y==papel and x==pedra or y==pedra and x==tesoura):
		msg = "BARSANULFO"
		i = i + 1
	else:
		msg = "EMPATE"
		i = i + 1
	  
	print(i)
	print(msg)

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:08:20) 
-- CODE:
from numpy import*
x = array(eval(input("digite a seuqencia de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
xvit = 0
yvit = 0

		 
while (i<size(x)):
	if(x==33  and y==22 or x==22 and y==11 or x==11 and y== 33):
		xvit += i
	elif(y==33 and x==22 or y==22 and x==11 or y==11 and x==33):
		yvit += i
	else:
		i +=1
	  
	print(size(x))
	

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:11:42) 
-- CODE:
from numpy import*
x = array(eval(input("digite a sequencias de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
soma1 = 0
soma2 = 0

		 
while (i<size(x)):
	if( x==33  and y==22 or x==22 and y==11 or x==11 and y== 33):
		soma1 = soma1 + i
	elif( y==33 and x==22 or y==22 and x==11 or y==11 and x==33):
		soma2 = soma2 + i
	else:
		i = i + 1
	  
	print(size(x))
	

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:14:57) 
-- CODE:
from numpy import*
x = array(eval(input("digite a sequencias de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
soma1 = 0
soma2 = 0

		 
while (i<size(x)):
	if( x[i] == 33  and y[i] == 22 or x[i] == 22 and y[i] == 11 or x[i] == 11 and y[i] == 33):
		soma1 = soma1 + i
	elif( y[i] == 33 and x[i] == 22 or y[i] == 22 and x[i] == 11 or y[i] == 11 and x[i] == 33):
		soma2 = soma2 + i
	else:
		i = i + 1
	  
	print(size(x))
	

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:15:04) 
-- CODE:
from numpy import*
x = array(eval(input("digite a sequencias de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
soma1 = 0
soma2 = 0

		 
while (i<size(x)):
	if( x[i] == 33  and y[i] == 22 or x[i] == 22 and y[i] == 11 or x[i] == 11 and y[i] == 33):
		soma1 = soma1 + i
	elif( y[i] == 33 and x[i] == 22 or y[i] == 22 and x[i] == 11 or y[i] == 11 and x[i] == 33):
		soma2 = soma2 + i
	else:
		i = i + 1
	  
	print(size(x))
	

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:16:55) 
-- CODE:
from numpy import*
x = array(eval(input("digite a sequencias de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
soma1 = 0
soma2 = 0

		 
while (i<size(x)):
	if( x[i] == 33  and y[i] == 22 or x[i] == 22 and y[i] == 11 or x[i] == 11 and y[i] == 33):
		soma1 = soma1 + i
	elif( y[i] == 33 and x[i] == 22 or y[i] == 22 and x[i] == 11 or y[i] == 11 and x[i] == 33):
		soma2 = soma2 + i
	else:
		i = i + 1
print(i)
	

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:17:29) 
-- CODE:
from numpy import*
x = array(eval(input("digite a sequencias de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
soma1 = 0
soma2 = 0

		 
while (i<size(x)):
	if( x[i] == 33  and y[i] == 22 or x[i] == 22 and y[i] == 11 or x[i] == 11 and y[i] == 33):
		soma1 = soma1 + i
	elif( y[i] == 33 and x[i] == 22 or y[i] == 22 and x[i] == 11 or y[i] == 11 and x[i] == 33):
		soma2 = soma2 + i
	else:
		i = i + 1

print(i)
	

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:17:58) 
-- CODE:
from numpy import*
x = array(eval(input("digite a sequencias de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
soma1 = 0
soma2 = 0

		 
while (i<size(x)):
	if( x[i] == 33  and y[i] == 22 or x[i] == 22 and y[i] == 11 or x[i] == 11 and y[i] == 33):
		soma1 = soma1 + i
	elif( y[i] == 33 and x[i] == 22 or y[i] == 22 and x[i] == 11 or y[i] == 11 and x[i] == 33):
		soma2 = soma2 + i
	else:
		i = i + 1

		print(i)
	

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:18:37) 
-- CODE:
from numpy import*
x = array(eval(input("digite a sequencias de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
soma1 = 0
soma2 = 0

		 
while (i<size(x)):
	if( x[i] == 33  and y[i] == 22 or x[i] == 22 and y[i] == 11 or x[i] == 11 and y[i] == 33):
		soma1 = soma1 + i
	elif( y[i] == 33 and x[i] == 22 or y[i] == 22 and x[i] == 11 or y[i] == 11 and x[i] == 33):
		soma2 = soma2 + i
	else:
		i = i + 1

		print(size(x))
	

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:18:46) 
-- CODE:
from numpy import*
x = array(eval(input("digite a sequencias de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
soma1 = 0
soma2 = 0

		 
while (i<size(x)):
	if( x[i] == 33  and y[i] == 22 or x[i] == 22 and y[i] == 11 or x[i] == 11 and y[i] == 33):
		soma1 = soma1 + i
	elif( y[i] == 33 and x[i] == 22 or y[i] == 22 and x[i] == 11 or y[i] == 11 and x[i] == 33):
		soma2 = soma2 + i
	else:
		i = i + 1

		print(size(x))
	

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:21:08) 
-- CODE:
from numpy import*
x = array(eval(input("digite a sequencias de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
soma1 = 0
soma2 = 0

		 
while (i<size(x)):
	if( x[i] == 33  and y[i] == 22 or x[i] == 22 and y[i] == 11 or x[i] == 11 and y[i] == 33):
		soma1 = soma1 + i
	elif( y[i] == 33 and x[i] == 22 or y[i] == 22 and x[i] == 11 or y[i] == 11 and x[i] == 33):
		soma2 = soma2 + i
	else:
		i = i + 1

		print(size(x))

if soma1>soma2:
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:22:07) 
-- CODE:
from numpy import*
x = array(eval(input("digite a sequencias de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
soma1 = 0
soma2 = 0

		 
while (i<size(x)):
	if( x[i] == 33  and y[i] == 22 or x[i] == 22 and y[i] == 11 or x[i] == 11 and y[i] == 33):
		soma1 = soma1 + 1
	elif( y[i] == 33 and x[i] == 22 or y[i] == 22 and x[i] == 11 or y[i] == 11 and x[i] == 33):
		soma2 = soma2 + 1
	else:
		i = i + 1

		print(size(x))

if soma1>soma2:
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:24:15) 
-- CODE:
from numpy import*
x = array(eval(input("digite a sequencias de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
soma1 = 0
soma2 = 0

		 
while (i<size(x)):
	if( x[i] == 33  and y[i] == 22 or x[i] == 22 and y[i] == 11 or x[i] == 11 and y[i] == 33):
		soma1 = soma1 + 1
	elif( y[i] == 33 and x[i] == 22 or y[i] == 22 and x[i] == 11 or y[i] == 11 and x[i] == 33):
		soma2 = soma2 + 1
	else:
		i = i + 1

		print(size(x))

	if soma1>soma2:
		print("EUSAPIA")
	elif(soma2>soma1):
		print("BARSANULFO")
	else:
		print("EMPATE")

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:27:40) 
-- CODE:
from numpy import*
x = array(eval(input("digite a sequencias de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
soma1 = 0
soma2 = 0

		 
while (i<size(x)):
	if( x[i] == 33  and y[i] == 22 or x[i] == 22 and y[i] == 11 or x[i] == 11 and y[i] == 33):
		soma1 = soma1 + 1
	elif( y[i] == 33 and x[i] == 22 or y[i] == 22 and x[i] == 11 or y[i] == 11 and x[i] == 33):
		soma2 = soma2 + 1
	else:
		i = i + 1

		print(size(x))

if soma1>soma2:
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:35:30) 
-- CODE:
from numpy import*
x = array(eval(input("digite a sequencias de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
soma1 = 0
soma2 = 0

		 
while (i<size(x)):
	if(x[i] == 33  and y[i] == 22 or x[i] == 22 and y[i] == 11 or x[i] == 11 and y[i] == 33):
		soma1 = soma1 + 1
	elif( y[i] == 33 and x[i] == 22 or y[i] == 22 and x[i] == 11 or y[i] == 11 and x[i] == 33):
		soma2 = soma2 + 1
	i = 1 + i

if (soma1>soma2):
	print(size(x))
	print("EUSAPIA")
elif(soma2>soma1):
	print(size(x))
	print("BARSANULFO")
else:
	print(size(x))
	print("EMPATE")

	  
	  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:35:50) 
-- CODE:
from numpy import*
x = array(eval(input("digite a sequencias de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
soma1 = 0
soma2 = 0

		 
while (i<size(x)):
	if(x[i] == 33  and y[i] == 22 or x[i] == 22 and y[i] == 11 or x[i] == 11 and y[i] == 33):
		soma1 = soma1 + 1
	elif( y[i] == 33 and x[i] == 22 or y[i] == 22 and x[i] == 11 or y[i] == 11 and x[i] == 33):
		soma2 = soma2 + 1
	i = 1 + i

if (soma1>soma2):
	print(size(x))
	print("EUSAPIA")
elif(soma2>soma1):
	print(size(x))
	print("BARSANULFO")
else:
	print(size(x))
	print("EMPATE")

	  
	  

-- EXECUTION TIME:
1.03119
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:08:31) 
-- CODE:
from numpy import*
x = array(eval(input("digite a sequencias de jogadas: ")))
y = array(eval(input("digite jogadas correspondente: ")))
	  
#x[0],x[1],x[2]

#y[0],y[1],y[2]
		 
i= 0
soma1 = 0
soma2 = 0

		 
while (i<size(x)):
	if(x[i] == 33  and y[i] == 22 or x[i] == 22 and y[i] == 11 or x[i] == 11 and y[i] == 33):
		soma1 = soma1 + 1
	elif( y[i] == 33 and x[i] == 22 or y[i] == 22 and x[i] == 11 or y[i] == 11 and x[i] == 33):
		soma2 = soma2 + 1
	i = 1 + i

if (soma1>soma2):
	print(size(x))
	print("EUSAPIA")
elif(soma2>soma1):
	print(size(x))
	print("BARSANULFO")
else:
	print(size(x))
	print("EMPATE")

	  
	  

-- EXECUTION TIME:
0.524688
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
